maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: not found: value i
      if (i>0) {
          ^Escaper:14: error: not found: value choix
    choix()
    ^Escaper:25: error: not found: value virage
      virage-=1
      ^Escaper:26: error: not found: value virage
      if (estFaceMur()) {droite();virage-=1}
                                  ^Escaper:29: error: not found: value virage
    else if (estFaceMur() && !keepHandOnSideWall()) {droite();avance();virage-=1}
                                                                       ^Escaper:31: error: not found: value virage
    else if (!estFaceMur() && !keepHandOnSideWall()) {droite();avance();virage-=1}
                                                                        ^Escaper:37: error: not found: value virage
      virage-=1
      ^Escaper:38: error: not found: value virage
      if (estFaceMur()) {droite();virage-=1}
                                  ^Escaper:41: error: not found: value virage
    else if (estFaceMur() && !keepHandOnSideWall()) {gauche();avance();virage+=1}
                                                                       ^Escaper:43: error: not found: value virage
    else if (!estFaceMur() && !keepHandOnSideWall()) {gauche();avance();virage+=1}
                                                                        ^